--- a/package.json
+++ b/package.json
@@ -4,19 +4,32 @@
   "description": "test",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --config ./webpack.config.js",
+    "watch": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "LancerAce",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "webpack": "^4.28.3"
+  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "babel-preset-react": "^6.24.1",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "webpack": "^4.28.3",
+    "babel-loader": "^8.0.4",
+    "react-hot-loader": "^4.6.3",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lancerace/React-Boilerplate.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lancerace/React-Boilerplate/issues"
+  },
+  "homepage": "https://github.com/lancerace/React-Boilerplate#readme"
 }
