--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
-"plugins": ["React-hot-loader/babel"], 
-"presets": [
-   "@babel/preset-env",
-   "@babel/preset-react"
- ]
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": [
+    [
+      "babel-plugin-react-css-modules",
+      {
+        "webpackHotModuleReloading": true
+      }
+    ]
+  ]
 }
