--- a/package.json
+++ b/package.json
@@ -3,33 +3,60 @@
   "version": "1.0.0",
   "description": "test",
   "main": "index.js",
+  "proxy": "http://localhost:8080",
   "scripts": {
+    "compile": "webpack --config ./webpack.config.js",
     "start": "webpack-dev-server --debug --output-pathinfo --config ./webpack.config.js",
-    "watch": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "bundle": "webpack",
     "build": "NODE_ENV=production npm run clean && webpack -p"
   },
   "author": "LancerAce",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.2.1",
-    "jquery": "^3.3.1",
-    "npm": "^6.7.0",
-    "popper.js": "^1.14.7",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "webpack": "^4.29.0"
+    "@material-ui/core": "^4.1.1",
+    "@material-ui/styles": "^4.1.0",
+    "@material-ui/system": "^4.2.0",
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "bootstrap": "^4.3.1",
+    "file-loader": "^4.0.0",
+    "jquery": "^3.4.1",
+    "npm": "^6.9.0",
+    "popper.js": "^1.15.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.11.1",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
+    "shortid": "^2.2.14",
+    "url-loader": "^2.0.0",
+    "webpack": "^4.33.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.4.5",
+    "@babel/helper-create-class-features-plugin": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-syntax-jsx": "^7.2.0",
+    "@babel/plugin-transform-react-display-name": "^7.2.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/plugin-transform-react-jsx-self": "^7.2.0",
+    "@babel/plugin-transform-react-jsx-source": "^7.2.0",
+    "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "css-loader": "^2.1.0",
-    "react-hot-loader": "^4.6.5",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
+    "prettier": "1.17.0",
     "style-loader": "^0.23.1",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-cli": "^3.3.4",
+    "webpack-dev-server": "^3.7.2"
   },
   "repository": {
     "type": "git",
