--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,12 @@
 {
   "presets": ["@babel/preset-env", "@babel/preset-react"],
-  "plugins": [
+  "plugins": [    ["react-hot-loader/babel"],
     [
       "babel-plugin-react-css-modules",
       {
         "webpackHotModuleReloading": true
       }
-    ]
+    ],
+    ["@babel/plugin-syntax-dynamic-import"],
   ]
 }
