--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,9 @@
     "react/jsx-indent": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-tag-spacing": "off",
-    "react/jsx-closing-bracket-location":"off"
+    "react/jsx-closing-bracket-location":"off",
+    "react/jsx-wrap-multilines": ["error",{"declaration":"ignore","assignment":"ignore"}],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   },
   "settings": {
     "import/resolver": {
