--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "bootstrap": "^4.3.1",
     "file-loader": "^4.0.0",
     "jquery": "^3.4.1",
-    "npm": "^6.9.0",
+    "npm": "^6.10.2",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.11.1",
+    "react-hot-loader": "^4.12.9",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "shortid": "^2.2.14",
@@ -36,6 +36,7 @@
     "@babel/core": "^7.4.5",
     "@babel/helper-create-class-features-plugin": "^7.4.4",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-transform-react-display-name": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
@@ -53,10 +54,14 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
+    "extract-css-chunks-webpack-plugin": "^4.5.6",
+    "html-webpack-plugin": "^3.2.0",
     "prettier": "1.17.0",
     "style-loader": "^0.23.1",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2"
+    "webpack-dev-server": "^3.7.2",
+    "write-file-webpack-plugin": "^4.5.0"
   },
   "repository": {
     "type": "git",
