--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "proxy": "http://localhost:8080",
   "scripts": {
     "compile": "webpack --config ./webpack.config.js",
-    "start": "webpack-dev-server --debug --output-pathinfo --config ./webpack.config.js",
+    "start": "webpack-dev-server --config ./webpack.config.js",
     "bundle": "webpack",
     "build": "NODE_ENV=production npm run clean && webpack -p"
   },
@@ -56,7 +56,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
     "extract-css-chunks-webpack-plugin": "^4.5.6",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.8",
     "prettier": "1.17.0",
     "style-loader": "^0.23.1",
     "webpack-bundle-analyzer": "^3.3.2",
