--- a/.eslintrc
+++ b/.eslintrc
@@ -22,10 +22,12 @@
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier"],
+  "plugins": ["react","react-hooks","prettier"],
   "rules": {
     "prettier/prettier": "error",
     "no-console": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "react/jsx-indent": "off",
