--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
       }
     ],
     ["@babel/plugin-syntax-dynamic-import"],
+    ["@babel/plugin-transform-react-jsx"],
     ["react-hot-loader/babel"]
   ]
 }
