--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "extract-css-chunks-webpack-plugin": "^4.5.6",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "prettier": "1.17.0",
