--- a/package.json
+++ b/package.json
@@ -13,57 +13,58 @@
   "author": "LancerAce",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.1.1",
-    "@material-ui/styles": "^4.1.0",
-    "@material-ui/system": "^4.2.0",
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/styles": "^4.4.3",
+    "@material-ui/system": "^4.4.3",
     "babel-plugin-react-css-modules": "^5.2.6",
     "bootstrap": "^4.3.1",
-    "file-loader": "^4.0.0",
+    "file-loader": "^4.2.0",
     "jquery": "^3.4.1",
-    "npm": "^6.10.2",
+    "npm": "^6.11.3",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.12.10",
-    "react-router": "^5.0.1",
-    "react-router-dom": "^5.0.1",
-    "shortid": "^2.2.14",
-    "url-loader": "^2.0.0",
-    "webpack": "^4.39.1"
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "react-hot-loader": "^4.12.14",
+    "react-router": "^5.1.1",
+    "react-router-dom": "^5.1.1",
+    "shortid": "^2.2.15",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.41.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/helper-create-class-features-plugin": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/core": "^7.6.2",
+    "@babel/helper-create-class-features-plugin": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
     "@babel/plugin-transform-react-display-name": "^7.2.0",
     "@babel/plugin-transform-react-jsx": "^7.3.0",
     "@babel/plugin-transform-react-jsx-self": "^7.2.0",
-    "@babel/plugin-transform-react-jsx-source": "^7.2.0",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/plugin-transform-react-jsx-source": "^7.5.0",
+    "@babel/preset-env": "^7.6.2",
     "@babel/preset-react": "^7.0.0",
-    "@hot-loader/react-dom": "^16.8.6",
-    "babel-eslint": "^10.0.2",
+    "@hot-loader/react-dom": "^16.9.0",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
-    "css-loader": "^2.1.1",
+    "css-loader": "^3.2.0",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
-    "eslint-plugin-react-hooks": "^2.0.1",
-    "extract-css-chunks-webpack-plugin": "^4.5.6",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.1.1",
+    "extract-css-chunks-webpack-plugin": "^4.6.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
-    "prettier": "1.17.0",
+    "prettier": "^1.18.2",
     "style-loader": "^0.23.1",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-server": "^3.7.2",
-    "write-file-webpack-plugin": "^4.5.0"
+    "webpack-bundle-analyzer": "^3.5.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1",
+    "write-file-webpack-plugin": "^4.5.1"
   },
   "repository": {
     "type": "git",
