--- a/.eslintrc
+++ b/.eslintrc
@@ -7,8 +7,9 @@
     "airbnb",
     "eslint:recommended",
     "plugin:react/recommended",
-//alway include prettier as last in plugin and extends. Doc:https://prettier.io/docs/en/integrating-with-linters.html
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "prettier", //{eslint-config-prettier} ,Turns off all rules that are unnecessary or might conflict with Prettier.
+    "prettier/react"
   ],
   "globals": {
     "Atomics": "readonly",
@@ -24,10 +25,12 @@
   },
   "plugins": ["react","react-hooks","prettier"],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier":"error",
     "no-console": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
+    "multiline-ternary": ["error", "always-multiline"],
+    "comma-dangle": ["error", "never"],
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "react/jsx-indent": "off",
@@ -35,7 +38,8 @@
     "react/jsx-tag-spacing": "off",
     "react/jsx-closing-bracket-location":"off",
     "react/jsx-wrap-multilines": ["error",{"declaration":"ignore","assignment":"ignore"}],
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-max-props-per-line":[1, { "maximum": 5 }]
   },
   "settings": {
     "import/resolver": {
