--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "extract-css-chunks-webpack-plugin": "^4.6.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "prettier": "^1.18.2",
+    "prettier-eslint": "^9.0.0",
     "style-loader": "^0.23.1",
     "webpack-bundle-analyzer": "^3.5.2",
     "webpack-cli": "^3.3.9",
