--- a/.eslintrc
+++ b/.eslintrc
@@ -39,7 +39,8 @@
     "react/jsx-closing-bracket-location":"off",
     "react/jsx-wrap-multilines": ["error",{"declaration":"ignore","assignment":"ignore"}],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/jsx-max-props-per-line":[1, { "maximum": 5 }]
+    //"react/jsx-first-prop-new-line":[1,"always"],
+    //,"react/jsx-max-props-per-line":[1, { "maximum": 2 }]
   },
   "settings": {
     "import/resolver": {
