--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,11 @@
 {
   "jsxBracketSameLine": true,
-  "parser":"babel"
+  "parser":"babel",
+  "printWidth": 80,
+  "tabWidth": 2,
+  "singleQuote": false,
+  "trailingComma": "none",
+  "bracketSpacing":true,
+  "semi": true,
+  "useTabs": false
 }
