--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
     "[javascriptreact]": {
         "editor.formatOnSave": false
     },    
-    "eslint.autoFixOnSave": true
-    //,"prettier.disableLanguages": ["javascript", "javascriptreact"]
+    "eslint.autoFixOnSave": true,
+    "prettier.disableLanguages": ["javascript", "javascriptreact"]
 
 }
