--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,4 @@
 {
   "jsxBracketSameLine": true,
-  "parser":"babel",
-  "printWidth": 80,
-  "tabWidth": 2,
-  "singleQuote": false,
-  "trailingComma": "none",
-  "bracketSpacing":true,
-  "semi": true,
-  "useTabs": false
+  "parser":"babel"
 }
