--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,14 @@
 {
-    "editor.formatOnSave": false, 
-    "css.lint.unknownProperties": "ignore", //ignore composes error unknown property for css composition  
+    //"editor.formatOnSave": true, //set as false and allow scoping of setting per-language basis
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    },
+    //"prettier.eslintIntegration": true,
+    "css.lint.unknownProperties": "ignore", //ignore composes error unknown property for css composition   
     "[javascript]": {
-        "editor.formatOnSave": false
+        "editor.formatOnSave": true
     },
     "[javascriptreact]": {
-        "editor.formatOnSave": false
-    },    
-    "eslint.autoFixOnSave": true,
-    "prettier.disableLanguages": ["javascript", "javascriptreact"]
-
+        "editor.formatOnSave": true
+    }
 }
