--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "test",
   "main": "index.js",
-  "proxy": "http://localhost:8080",
+  "proxy": "https://qa-interview-test.qa.splytech.io",
   "scripts": {
     "compile": "webpack --config ./webpack.config.js",
     "start": "webpack-dev-server --config ./webpack.config.js",
@@ -16,10 +16,13 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/styles": "^4.5.0",
     "@material-ui/system": "^4.5.0",
+    "axios": "^0.19.1",
     "babel-plugin-react-css-modules": "^5.2.6",
     "bootstrap": "^4.3.1",
+    "fetch-jsonp": "^1.1.3",
     "file-loader": "^4.2.0",
-    "npm": "^6.12.0",
+    "jsonp": "^0.2.1",
+    "npm": "^6.13.4",
     "popper.js": "^1.15.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
